Sun Aug 26 22:54:57 2001  George Lebl <jirka@5z.com>

	* libgnome.h, Makefile.am, gnome-gconf.c: Getting confused a bit,
	  fix things up, now it does compile

Sun Aug 26 22:48:54 2001  George Lebl <jirka@5z.com>

	* gnome-init.c, gnome-gconf.[ch], Makefile.am:  Add gconf support
	  here.  This is the init stuff, none of the gui stuff.

Sun Aug 26 07:29:59 2001  George Lebl <jirka@5z.com>

	* Makefile.am, gnome-config.[ch], parse-path.cP, gnome-sound.[ch],
	  gnome-triggersP.h, gnome-triggers.[ch], gnome-i18n.[ch],
	  gnome-i18nP.h, libgnome.h:  Bring back sane versions of these files.
	  Will be marked as deprecated where appropriate later after some more
	  discussion.  In gnome-i18n, don't bring back the broken and
	  unused crap (preffered language and get_language)

	* gnome-i18nP.h, gnome-exec.c, gnome-init.c, gnome-program.c, 
	  gnome-url.c, test-libgnome.c: Make translations works once more

	* gnome-util.c: paranoia fix, setuid/setgid programs can't use
	  getenv ("SHELL") (for obvious reasons).

Thu Aug 23 23:23:42 2001  George Lebl <jirka@5z.com>

	* gnome-exec.c: fix a 64bit issue with a format string (remember
	  that types that you don't know size (such as gsize) should be
	  casted when passed to printf since they can be either %d or %ld
	  or some such.

2001-08-10  Michael Meeks  <michael@ximian.com>

	* gnome-init.c (libgnome_requirements): remove redundant
	duplicate libbonobo_module_info.

2001-08-13  Martin Baulig  <baulig@suse.de>

	* gnome-init.c (bonobo_activation_post_args_parse): Get the
	Bonobo::ActivationContext here, this avoids some nasty
	reentrancy problems.

	* gnome-program.c (gnome_program_locate_file): Allow the `program'
	argument to be NULL, in this case call gnome_program_get().

2001-08-09  Martin Baulig  <baulig@suse.de>

	* gnome-util.h (gnome_*_file, gnome_unconditional_*_file): Put
	them back, but #define it as a gnome_program_locate_file() call.

2001-08-09  Martin Baulig  <baulig@suse.de>
