@@ -101,9 +101,8 @@ gnome_program_locate_file               (GnomeProgram    *program,
 #define GNOME_PARAM_POPT_FLAGS          "popt-flags"
 #define GNOME_PARAM_POPT_CONTEXT        "popt-context"
 #define GNOME_PARAM_CREATE_DIRECTORIES  "create-directories"
-#define GNOME_PARAM_SOUND_DRIVER	"sound-driver"
 #define GNOME_PARAM_ENABLE_SOUND        "enable-sound"
-#define GNOME_PARAM_FILE_LOCATOR        "file-locator"
+#define GNOME_PARAM_ESPEAKER            "espeaker"
 #define GNOME_PARAM_APP_ID              "app-id"
 #define GNOME_PARAM_APP_VERSION         "app-version"
 #define GNOME_PARAM_APP_PREFIX          "app-prefix"
